test_case/rust-lang_rust/94788_1063494275.rs

fn yam<T>(foo: Wrapper<T>)
//~^ ERROR the size for values of type `T` cannot be known at compilation time
where
    T
    :
    ?
    Sized {
    //
}
